POI recommendation SVPOI (邵长城,陈平华.融合社交网络和图像内容的兴趣点推荐[J].计算机应用,2019,39(5):1261-1268.)

--- a/core/src/main/resources/driver.classes.props
+++ b/core/src/main/resources/driver.classes.props
@@ -8,6 +8,7 @@ arff=net.librec.data.model.ArffDataModel
 #DataAppender(-appender)
 social=net.librec.data.convertor.appender.SocialDataAppender
 document=net.librec.data.convertor.appender.DocumentDataAppender
+photo=net.librec.data.convertor.appender.PhotoDataAppender
 #DataSplitter(-splitter)
 ratio=net.librec.data.splitter.RatioDataSplitter
 givenn=net.librec.data.splitter.GivenNDataSplitter
@@ -87,6 +88,8 @@ pitf=net.librec.recommender.context.rating.PITFRecommender
 rste=net.librec.recommender.context.rating.RSTERecommender
 socialmf=net.librec.recommender.context.rating.SocialMFRecommender
 sorec=net.librec.recommender.context.rating.SoRecRecommender
+svpoi=net.librec.recommender.context.rating.SVPOIRecommender
+svpoi2=net.librec.recommender.context.rating.SVPOI2Recommender
 soreg=net.librec.recommender.context.rating.SoRegRecommender
 timesvd=net.librec.recommender.context.rating.TimeSVDRecommender
 trustmf=net.librec.recommender.context.rating.TrustMFRecommender
