--- a/core/src/main/resources/librec-default.properties
+++ b/core/src/main/resources/librec-default.properties
@@ -1,14 +1,14 @@
 # set data directory
-dfs.data.dir=../data
+dfs.data.dir=E:/essayData/data
 # set result directory
 # recommender result will output in this folder
-dfs.result.dir=../result
+dfs.result.dir=E:/essayData/result
 
 # convertor
 # load data and splitting data 
 # into two (or three) set
 # setting dataset name
-data.input.path=filmtrust/rating
+data.input.path=poi/rating
 # setting dataset format(UIR, UIRT)
 data.column.format=UIR
 # setting method of split data
@@ -43,7 +43,7 @@ data.convert.binarize.threshold=-1.0
 rec.eval.enable=true
 
 # specifies evaluators
-# rec.eval.classes=auc,precision,recall...
+#rec.eval.classes=precision,ap
 # if rec.eval.class is blank 
 # every evaluator will be calculated
 # rec.eval.classes=auc,precision,recall
@@ -51,6 +51,7 @@ rec.eval.enable=true
 # evaluator value set is written in User Guide
 # if this algorithm is ranking only true or false
 rec.recommender.isranking=false
+
 
 #can use user,item,social similarity, default value is user, maximum values:user,item,social
 #rec.recommender.similarities=user
