--- a/core/src/main/resources/rec/cf/ranking/wrmf-test.properties
+++ b/core/src/main/resources/rec/cf/ranking/wrmf-test.properties
@@ -1,10 +1,12 @@
 rec.recommender.class=wrmf
-rec.iterator.maximum=20
+rec.iterator.maximum=100
+rec.iterator.learnrate=0.01
+rec.iterator.learnrate.maximum=0.01
 rec.user.regularization=0.01
 rec.item.regularization=0.01
 rec.factor.number=10
 rec.recommender.isranking=true
-rec.recommender.ranking.topn=10
+rec.recommender.ranking.topn=20
 
-#confidence weight coefficient, alpha in original paper
+#confidence weight coefficient, alpha in original paper -- confidenceMatrix_{ui} - 1 = alpha * r_{ui} or log(1+10^alpha * r_{ui})  --- alpha is 4.0
 rec.wrmf.weight.coefficient=4.0
