--- a/core/src/main/resources/rec/cf/rating/pmf-test.properties
+++ b/core/src/main/resources/rec/cf/rating/pmf-test.properties
@@ -1,9 +1,17 @@
 rec.recommender.class=pmf
 rec.iterator.learnrate=0.01
 rec.iterator.learnrate.maximum=0.01
-rec.iterator.maximum=70
-rec.user.regularization=0.08
-rec.item.regularization=0.08
-rec.factor.number=6
+rec.iterator.maximum=1000
+#70
+rec.user.regularization=0.01
+#0.08
+rec.item.regularization=0.01
+#0.08
+rec.factor.number=10
+#6
 rec.learnrate.bolddriver=false
+#decay is set to update learn rate : learnRate *= decay;
 rec.learnrate.decay=1.0
+#rec.recommender.isranking=true
+#rec.recommender.ranking.topn=10
+#rec.eval.classes=precision,recall
