--- a/conf/librec.properties
+++ b/conf/librec.properties
@@ -1,14 +1,14 @@
 # set data directory
-dfs.data.dir=../data
+dfs.data.dir=E:/essayData/data
 # set result directory
 # recommender result will output in this folder
-dfs.result.dir=../result
+dfs.result.dir=E:/essayData/result
 
 # convertor
 # load data and splitting data 
 # into two (or three) set
 # setting dataset name
-data.input.path=filmtrust/rating
+data.input.path=poi/rating
 # setting dataset format(UIR, UIRT)
 data.column.format=UIR
 # setting method of split data
