--- a/core/src/main/resources/rec/context/rating/sorec-test.properties
+++ b/core/src/main/resources/rec/context/rating/sorec-test.properties
@@ -1,15 +1,18 @@
 data.appender.class=social
-data.appender.path=test/test-append-dir
+data.appender.path=poi/trust
 rec.recommender.class=sorec
-rec.iterator.learnrate=0.02
+#学习率
+rec.iterator.learnrate=0.02 
 rec.iterator.learnrate.maximum=-1
-rec.iterator.maximum=100
+rec.iterator.maximum=1000
 rec.user.regularization=0.001
 rec.item.regularization=0.001
 rec.rate.social.regularization=0.01
 rec.user.social.regularization=0.01
+# 特征矩阵维度
 rec.factor.number=5
-rec.learnrate.bolddriver=false
+# adapting the global learning rate ? is the bold driver algorithm
+rec.learnrate.bolddriver=false 
 rec.learnrate.decay=1.0
 rec.recommender.earlystop=false
 rec.recommender.verbose=true
